@@ -1,2 +1,3 @@
 DIST bowtie-1.1.1-src.zip 7711451 SHA256 92aacb2d32065ebee433ce76eff673c24ed12591eb6c20e22ad7e4a790c48f72 SHA512 b7e2604902d846e5e1ce79ae79eceed5401070e7db76f6875d1617e277f8244a32930b334b20869c712bab58d7d88ae26f2569350c8324df4dddae0400c013f9 WHIRLPOOL 65d1248280b32ca1f6cf7c270895abdfbec27f32128915b13a01e43a7697a743f1872440f528b29413140c260e9b7f61b6a4d435f3f83be486972b6b1533d6a5
-DIST bowtie2-2.2.4-source.zip 5725498 SHA256 1f3482bf31111dbfb8b547f984c4755296316f6c48c33c7d3cf19c814785d0aa SHA512 f4d40cb9d6d8f6b956d9ac6e109dba15d2e3815bb7e6498465e7ee81b59b725ae118fd6ec385482605b0218e99ee13350127926df3efe6e6ab0da7ff816b654f WHIRLPOOL 561b67d206a5e5791d3034c28700e371bca18005ff13ae895a816d95e92f606c1f5f1ffdd41e581ce052417ebb386b8ca36f1dc9dc3ed30fb4b5b8607164befd
+DIST bowtie2-2.2.3-source.zip 5724584 SHA256 c4f5ce9f0f53a6b8c7f573a26e96f6909f25bd4e0e8bd77191eaa10671baf0bf SHA512 3baf0e764a79e34b6767a62d52777fc528a82481f417ea5f1b24f38e01fac68c2870daff3060c8da11681d3270e15a10ede034356522336a94f0936d70874684 WHIRLPOOL e19ea1cee85c5ccbc198a981587e8832ebfb4bd9a02332d8171d218e89e6c84df5760db6cd1f8195b712097c6ff3ae7790415d1e63afd2632979392709de26ab
+DIST bowtie2-2.2.5-source.zip 5725798 SHA256 e22766dd9421c10e82a3e207ee1f0eb924c025b909ad5fffa36633cd7978d3b0 SHA512 8b97860fea73ef36a60dee3dbccdfc956ac7f619ec47a7b820d1df09cff8f77362ddc8071b59ea8021444bda59757d68bdf486fb453d5c4e4b896198bc465d60 WHIRLPOOL 7a8eb7e6d723ccb807a1db3b724326764f8f339017c0b4eb6b234e034458e736ba521106bcc8347c3c428008d8f138f463f3c3e6033b781e1c41898735c2a878
